# MathBuddy

./: LICENSE  README.md
annotation/: README.md  emotion_annotations_mathdial_bridge.json
backend/: .gitignore  README.md  accelerate_config.yml  pyproject.toml  requirements.txt
backend/src/tutor/backend/: app.py  backend.py  logic.py  parse.py
backend/src/tutor/github/: __init__.py  logic.py  queries.py
backend/src/tutor/github/model/: __init__.py  milestone.py  repository.py  task.py
backend/src/tutor/model/: __init__.py  prompt_generator.py  tutor.py
backend/src/tutor/model/emotion/: __init__.py  emotion.py  emotion_bert.py  emotion_model.py  face_emotion_model.py  face_emotion_rating.py  local_emotion_model.py  local_face_emotion_model.py  pre_trained_emotion_model.py  sentiment.py  sentiment_rating.py
backend/src/tutor/model/language/: __init__.py  gemini_language_model.py  language_model.py  language_model_endpoint.py  local_language_model.py  message.py
backend/src/tutor/plot/: gantt.py
backend/src/tutor/util/: __init__.py  jsons.py  timelog.py  types.py
frontend/: .gitignore  README.md  emotion_survey.ipynb  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/client/: index.html
frontend/client/src/: App.tsx
frontend/client/src/components/: ChatInterface.tsx  Header.tsx  TextInput.tsx  (+4 more)
frontend/server/: globals.ts  index.ts  problems.ts  requests.ts  routes.ts  vite.ts
frontend/server/storage/: inMemStorage.ts  persistInMemStorage.ts  serialId.ts  storage.ts
frontend/shared/: schema.ts  settings.ts  utils.ts
(+5 files in other folders)
